[package]
name = "vitadecompiler"
version = "0.1.1"
edition = "2024"

[dependencies]
capstone = "0.14.0"
goblin = "0.10.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 2
strip = true
